Reorganizing and go api project.
