# go_api/docs/swagger.yaml
@@ -1,14 +1,16 @@
 basePath: /
 definitions:
-  usecase.AuthLoginInputDTO:
+  dto.LoginInputDTO:
     properties:
       email:
         type: string
       password:
         type: string
     type: object
-  usecase.AuthLoginOutputDTO:
+  dto.LoginOutputDTO:
     properties:
+      created_at:
+        type: string
       email:
         type: string
       id:
@@ -17,24 +19,28 @@ definitions:
         type: string
       token:
         type: string
-    type: object
-  usecase.CreateUserInputDTO:
-    properties:
-      email:
-        type: string
-      name:
-        type: string
-      password:
+      updated_at:
         type: string
     type: object
-  usecase.UpdateUserPasswordInputDTO:
+  dto.UpdateUserPasswordInputDTO:
     properties:
       id:
         type: integer
       password:
         type: string
     type: object
-  usecase.UserOutputDTO:
+  dto.UserInputDTO:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+    type: object
+  dto.UserOutputDTO:
     properties:
       created_at:
         type: string
@@ -67,14 +73,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/usecase.AuthLoginInputDTO'
+          $ref: '#/definitions/dto.LoginInputDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/usecase.AuthLoginOutputDTO'
+            $ref: '#/definitions/dto.LoginOutputDTO'
         "500":
           description: Internal Server Error
           schema:
@@ -94,7 +100,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/usecase.UserOutputDTO'
+              $ref: '#/definitions/dto.UserOutputDTO'
             type: array
         "500":
           description: Internal Server Error
@@ -113,7 +119,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/usecase.CreateUserInputDTO'
+          $ref: '#/definitions/dto.UserInputDTO'
       produces:
       - application/json
       responses:
@@ -143,7 +149,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/usecase.UserOutputDTO'
+            $ref: '#/definitions/dto.UserOutputDTO'
         "500":
           description: Internal Server Error
           schema:
@@ -167,7 +173,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/usecase.UpdateUserPasswordInputDTO'
+          $ref: '#/definitions/dto.UpdateUserPasswordInputDTO'
       produces:
       - application/json
       responses:
