# go_api/domain/dto/auth.go
@@ -1,0 +1,17 @@
+package dto
+
+import "time"
+
+type LoginInputDTO struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type LoginOutputDTO struct {
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	Token     string    `json:"token"`
+}
