# go_api/domain/dto/user.go
@@ -1,0 +1,23 @@
+package dto
+
+import "time"
+
+type UserOutputDTO struct {
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type UserInputDTO struct {
+	ID       uint   `json:"id"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type UpdateUserPasswordInputDTO struct {
+	ID       uint   `json:"id"`
+	Password string `json:"password"`
+}
